<resources>
    <string name="app_name">Actify</string>
    <string name="logo_text">ACTIFY</string>
    <string name="email_hint_login">Email</string>
    <string name="password_hint_login">Password</string>
    <string name="submit_login">Submit</string>
    <string name="logo_description">Logo of Actify Organisation</string>
    <string name="signup_login">Don\'t have an account?</string>
    <string name="guest_login">Login as a guest</string>
    <string name="forgot_password_login">Forgot your password?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password_signup">Confrim Password</string>
    <string name="next_signup">Next</string>
    <string name="event_title">Sportd and Health</string>
    <string name="date_number_event">28th</string>
    <string name="event_month">October</string>
    <string name="event_location">45 Waterloo St, Glasgow G2 6HS</string>
    <string name="event_time">18:00 - 22:00</string>
    <string name="description_event">Description:</string>
    <string name="event_description">Want to experience something different to IB and Consulting?
        Want hints and tips to stand out in internship and grad scheme applications?  We’re excited
        to be welcoming two Warwick alumni, currently on the Shell Graduate Programme, who will share
        their experiences with you:  Michael is a second rotation commercial graduate, currently
        responsible for developing new.</string>
    <string name="going_event">Going</string>
    <string name="event_picture">Picture of event</string>
    <string name="explore_hint">Search for events</string>
    <string name="add_event_title">Title</string>
    <string name="add_event_date">Date</string>
    <string name="add_event_time">Time</string>
    <string name="add_event_description">Description</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="add_event_quote">Create your event</string>
    <string name="title_activity_homepage">homepage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Explore</string>
    <string name="title_notifications">Vote</string>
    <string name="question_vote">From 0 to 10 (with 10 being the best), How would you rate your physical activity the last 2 weeks?</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="question_vote_2">Did you go for a jog in the last 5 days?</string>
    <string name="yes">yes</string>
    <string name="No">No</string>
    <string name="signup_age">Age</string>
    <string name="signup_address">PostCode</string>
    <string name="signup_physical">How would you rate your physical activity in the past 6 months?</string>
    <string name="signup_activity">Favourite Activity</string>
    <string name="signup_goal">What is your Goal</string>
    <string name="signup_goal_1">Get fit and healthy</string>
    <string name="signup_goal_2">Lose Weight</string>
    <string name="signup_goal_3">Other Reason</string>
    <string name="signup_disability">Any Disabilities?</string>
</resources>
