<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/actify_white"
        tools:layout_editor_absoluteY="25dp">

        <EditText
            android:id="@+id/add_event_title"
            style="@style/Actify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:hint="@string/add_event_title"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:textColor="@color/actify_dark_grey"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/add_event_date"
            style="@style/Actify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="50dp"
            android:clickable="true"
            android:focusable="true"
            android:ems="10"
            android:hint="@string/add_event_date"
            android:inputType="date"
            android:onClick="clickDataPicker"
            android:textAlignment="textStart"
            android:textColor="@color/actify_dark_grey"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_event_title" />

        <EditText
            android:id="@+id/add_event_time"
            style="@style/Actify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:hint="@string/add_event_time"
            android:inputType="time"
            android:onClick="clickTimePicker"
            android:textColor="@color/actify_dark_grey"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_event_date" />

        <EditText
            android:id="@+id/add_event_description"
            style="@style/Actify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/add_event_description"
            android:inputType="textMultiLine"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_event_time" />

        <Button
            android:id="@+id/upload_picture"
            style="@style/Actify_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="105dp"
            android:background="@color/actify_orange"
            android:text="@string/upload_picture"
            android:textAlignment="center"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_event_description" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upload_picture"
            app:srcCompat="@drawable/runnning" />

        <Button
            android:id="@+id/add_event_submit"
            style="@style/Actify_Button"
            android:layout_marginStart="105dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="105dp"
            android:text="@string/submit_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.423"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton"/>

        <TextView
            android:id="@+id/add_event_hint"
            style="@style/Actify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="50dp"
            android:text="@string/add_event_quote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>