<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/actify_white">

    <TextView
        android:id="@+id/question_vote"
        style="@style/Actify"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:text="@string/question_vote_2"
        android:textAlignment="center"
        android:textColor="@color/actify_light_grey"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button_vote"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="150dp"
        android:background="@color/actify_blue"
        android:text="@string/yes"
        android:textColor="@color/actify_dark_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_vote" />

    <Button
        android:id="@+id/button_2_vote"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="150dp"
        android:background="@color/actify_blue"
        android:text="@string/No"
        android:textAlignment="center"
        android:textColor="@color/actify_dark_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_vote" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="342dp"
        android:layout_height="85dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/actify_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>